# Mind-Coin

./: CODEOWNERS  CONTRIBUTING.md  INSTALL.md  Makefile.am  Makefile.in  README.md  SECURITY.md  aclocal.m4  configure  configure.ac  libmindblockchainconsensus.pc.in
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
build_msvc/: .gitignore  README.md  libsecp256k1_config.h  mind.sln  mind_config.h  mindblockchain.sln  mindblockchain_config.h  msvc-autogen.py  vcpkg.json
contrib/: README.md  gitian-build.py  install_db4.sh  mindblockchain-cli.bash-completion  mindblockchain-qt.pro  mindblockchain-tx.bash-completion  mindblockchaind.bash-completion  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  mindblockchain-conf.md  multiprocess.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes-mindblockchain.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  Makefile.in  mindblockchain-cli.1  mindblockchain-qt.1  mindblockchain-tx.1  mindblockchain-wallet.1  mindblockchaind.1
share/: genbuild.sh  setup.nsi.in
(+1052 files in other folders)
