dist_man1_MANS=

if BUILD_MINDBLOCKCHAIND
  dist_man1_MANS+=mindblockchaind.1
endif

if ENABLE_QT
  dist_man1_MANS+=mindblockchain-qt.1
endif

if BUILD_MINDBLOCKCHAIN_CLI
  dist_man1_MANS+=mindblockchain-cli.1
endif

if BUILD_MINDBLOCKCHAIN_TX
  dist_man1_MANS+=mindblockchain-tx.1
endif

if ENABLE_WALLET
if BUILD_MINDBLOCKCHAIN_WALLET
  dist_man1_MANS+=mindblockchain-wallet.1
endif
endif
